roles/deploy/files/web/css/style.css
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');

* {
    --color-primary: hsl(204, 100%, 80%);
    --color-primary-accent: hsl(204, 30%, 50%);
    --color-secondary: hsl(320, 100%, 85%);
}

.error {
    color: red;
}

::-webkit-scrollbar { 
    display: none; 
}

/* Background/Body */
@keyframes bgscroll
{
    0%
    {
        background-position: 0px 0px, 52px 52px;
    }
    100%
    {
        background-position: -52px 52px, 0px 104px;
    }
}

html
{
    height: 100%;
    background-image:
        radial-gradient(rgb(14, 14, 14) 18%, transparent 18%),
        radial-gradient(rgb(14, 14, 14) 18%, transparent 18%);
    background-size: 104px 104px;
    background-color: rgb(18, 18, 18);
    background-repeat: repeat-x repeat-y;
    animation: bgscroll 3s linear infinite;
}

body
{
    width: 90%;
    max-width: 1200px;
    /* border-radius: 20px; */
    background-color: rgb(14, 14, 14);
    background-size: 50vh 100vh;
    padding-bottom: 10px;
    margin: 10px auto;
    /* animation: body-fadein 0.75s ease forwards; */
}

header {
    margin-left: 20px;
}

.pagetitle {
    margin-left: 0px;
    display: inline-block;
    padding: 0px 0px;
    animation-timing-function: linear;
    animation: wiggle 1.5s alternate ease-in-out infinite;
}

@keyframes wiggle {
    0% {
        transform: rotate(1deg);
    }
    50% {
        transform: rotate(-1deg);
    }
    100% {
        transform: rotate(1deg);
    }
}

/* @keyframes body-fadein {
    0%
    {
        opacity: 0%;
        margin: -10px auto;
    }
    100%
    {
        opacity: 100%;
        margin: 10px auto;
    }
} */

.vertical-divider
{
    height: 1px;
    margin: 20px 20px;
    background-color: var(--color-primary)
}

.header-divider
{
    height: 1px;
    margin: 20px 20px;
    margin-top: 0px;
    background-color: var(--color-primary)
}

.small-vertical-divider
{
    height: 1px;
    margin: 20px 20%;
    background-color: var(--color-primary)
}

/* Navigation */
.iconbar
{
    padding: 5px 0;
    height: 32px;
    display: flex;
}

.icon
{
    width: 32px;
    height: 32px;
    margin: 0px 5px;
    filter: invert(100%) brightness(90%);
}

.navbar
{
    padding-top: 5px;
    display: flex;
    flex-wrap: wrap;
}

button,
select
{
    margin: 0 2px;
    width: auto;
    border-bottom: 2px solid var(--color-primary);
    border-left: transparent;
    border-right: transparent;
    border-top: transparent;
    font-size: 16px;
    background-color: rgb(34, 34, 34);
}

.navtab
{
    float: left;
    display: flex;
    height: 24px;
    margin: 1px 1px;
}

@keyframes navtab-select
{
    0%
    {
        background-color: rgb(108, 108, 108);
    }
    100%
    {
        background-color: rgb(56, 56, 56);
    }
}

@keyframes navtab-deselect
{
    0%
    {
        background-color: rgb(56, 56, 56);
    }
    100%
    {
        background-color: rgb(34, 34, 34);
    }
}

button:hover
{
    background-color: rgb(56, 56, 56);
    transition: 0.5s;
    cursor: pointer;
}

@keyframes button-click
{
    0%
    {
        background-color: rgb(84, 84, 84);
    }
    100%
    {
        background-color: rgb(34, 34, 34);
    }
}

.promptbutton
{
    animation: button-click 0.5s linear forwards;
    margin-left: auto;
    margin-right: auto;
}

.tab
{
    display: none;
}

/* Fonts */
p,
a,
h1,
h2,
h3,
ul,
li,
th,
td,
button,
label,
select
{
    color:white;
    font-family: 'Source Code Pro', monospace;
    margin: 0px 20px;
}

a
{
    color: var(--color-primary-accent);
    font-weight: bold;
    transition: 0.5s;
    margin: 0px 0px;
    text-decoration: none;
}

a:hover
{
    background-color: hsl(204, 30%, 50%, 0.2);
    transition: 0.5s;
    cursor: pointer;
}

[data-tooltip] {
    border-bottom: 1px dotted #FFFFFF;
    text-decoration: none;
}

[data-tooltip]:hover::after {
  display: block;
  position: absolute;
  content: attr(data-tooltip);
  border: 1px solid grey;
  background: #0F0F0F;
  padding: .25em;
}

.grey
{
    color: rgb(84, 84, 84)
}

.tcolors
{
    animation:
        tcolor 3s alternate infinite
}

@keyframes tcolor
{
    0%
    {
        color: hsl(0, 0%, 100%)
    }
    50%
    {
        color: hsl(320, 100%, 85%)
    }
    100%
    {
        color: hsl(204, 100%, 80%)
    }
}

/* Remove dot from ul/li */
ul,
li
{
    padding-left: 0;
    list-style-type: none;
}

/* Footer text */
#c
{
    font-size: 13px;
}

/* Images/Video embeds */
img,
iframe
{
    border: 0;
    max-width: 90%;
    max-height: 225px;
    border-radius: 20px;
    margin: auto;
    display: flex;
    justify-content: center;
}

img.large,
iframe.large
{
    border: 0;
    max-width: 90%;
    max-height: 450px;
    border-radius: 20px;
    margin: auto;
    display: flex;
    justify-content: center;
}

